# template_project_cpp

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.txt
.github/workflows/: linux.yml  macosx.yml  main.yml  windows.yml
cmake/: CompilerOptions.cmake
include/Greet/: Foo.h
src/: main.cpp
src/Greet/: Foo.c++  Foo.cc  Foo.cpp  Foo.cxx
test/: CMakeLists.txt  test.foo.cpp  test.main.cpp
test/Foo/: test.Foo.c++  test.Foo.cc  test.Foo.cpp  test.Foo.cxx
